--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
-// hide scrollbar
-// html::-webkit-scrollbar {
-//   display: none;
-// }
-// html{
-//   -ms-overflow-style: none;
-// }
+html::-webkit-scrollbar {
+  display: none;
+}
+html{
+  -ms-overflow-style: none;
+}
 
 .body--light, .body--dark {
   div#q-app{
@@ -16,7 +15,10 @@
 }
 .body--light {
   div#q-app {
-    background: linear-gradient(to bottom, $background, #fff);
+    background: linear-gradient(to bottom, $background-1, $background-2);
+  }
+  .q-card, .q-table__container {
+    background: $background-2;
   }
 }
 
