--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,11 +12,12 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #0098f0;
-$secondary : #00f2c3;
+$primary   : #444546;
+$secondary : #d8d8d8;
 $accent    : #9C27B0;
 
-$background :#edeff2;
+$background-1: #edeff2;
+$background-2: #f5f5f5;
 
 $dark      : #27293d;
 
