wip - final touches

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -21,7 +21,7 @@ $background-2: #f5f5f5;
 
 $dark      : #27293d;
 
-$positive  : #1d3557;
-$negative  : #ec250d;
+$positive  : #31a675;
+$negative  : #e54150;
 $info      : #31CCEC;
 $warning   : #F2C037;
